# api/routes/order.js
@@ -1,27 +1,73 @@
 const multer = require('multer');
 const upload = multer({dis:'paints/'});
+var realm  = require('express-http-auth').realm('Private Area');
 
+const User = require('../models/users.js');
+const Admin = require('../models/admins');
 
+var checkUserAccess= function(req, res, next) {
+    User.findById(req.username).then(user => {
+        if ((user) && (user.password === req.password)) {
+            next();
+        } else {
+            res.status(403).send({
+                message: "error in password or username... check your credential!"
+            });
+        }
+    });
+};
+
+var checkForAdmin = function(req, res, next) {
+    Admin.findById(req.username).then(admin => {
+        if ((admin) && (admin.password === req.password)) {
+            next();
+        } else {
+            res.status(403).send({
+                message: "error in password or username... check your credential!"
+            });
+        }
+    });
+};
+
+var CheckdminAndUserAccess = function(req, res, next) {
+    Admin.findById(req.username).then(admin => {
+        if ((admin) && (admin.password === req.password)) {
+            next();
+        }
+        else {
+            User.findById(req.username).then(user => {
+                if ((user) && (user.password === req.password)) {
+                    next();
+                }
+                else {
+                    res.status(403).send({
+                        message: "error in password or username... check your credential!"
+                    });
+                }
+            });
+        }
+    });
+};
+
+var userAccess = [realm, checkUserAccess];
+var AdminAccess = [realm, checkForAdmin];
+var adminAndUserAccess = [realm, CheckdminAndUserAccess];
 module.exports = (app) => {
-    const admins = require('../controllers/admins.js');
+    const orders = require('../controllers/orders.js');
 
-    // Create a new Note
-    app.post('/admin', admins.create);
+    // Create a new Order
+    app.post('/order', userAccess ,orders.create);
 
-    // Retrieve all Notes
-    app.get('/admin', admins.findAll);
+    // Retrieve all Orders
+    app.get('/order',adminAndUserAccess, orders.findAll);
 
-    // Retrieve a single Note with noteId
-    app.get('/admin/:adminId', admins.findOne);
+    // Retrieve a single Order with noteId
+    app.get('/order/:orderId',adminAndUserAccess,orders.findOne);
 
-    // Update a Note with noteId
-    app.put('/admin/:adminId',admins.update);
+    // Update a Order with noteId
+    app.put('/order/:orderId',AdminAccess,orders.update);
 
-    // Delete a Note with noteId
-    app.delete('/admin/:adminId', admins.delete);
+    // Delete a Order with noteId
+    app.delete('/order/:orderId', AdminAccess,orders.delete);
 
-    // Retrieve chart
-    app.get('/admin/chart/:chartName', admins.getChart);
-
-    app.post('/admin/chart',upload.single('chart') ,admins.postChart);
 }
